# elina-rs

./: Cargo.toml  LICENSE-MIT  README.md
elina-sys/: Cargo.toml  build.rs  gen-bindings.sh  wrapper.c  wrapper.h
elina-sys/examples/: simple.rs
elina-sys/src/: bindings.rs  lib.rs
examples/: bottom_free.rs  bug.c  showcase.rs
src/: ast.rs  lib.rs  util.rs
