[package]
name = "elina-sys"
version = "0.1.0"
edition = "2018"
license = "MIT OR Apache-2.0"
authors = ["Niels Saurer <me@nielssaurer.com>"]

description = "Low-level bindings for ELINA"
categories = ["external-ffi-bindings"]
homepage = "https://github.com/skius/elina-rs"
repository = "https://github.com/skius/elina-rs"
documentation = "https://docs.rs/elina-sys"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
bindgen = "0.59.1"
cc = "1.0.71"
